--- a/GDG Israel/build.gradle
+++ b/GDG Israel/build.gradle
@@ -14,7 +14,7 @@ repositories {
 
 android {
     compileSdkVersion 18
-    buildToolsVersion "18.0.1"
+    buildToolsVersion '18.0.1'
 
     defaultConfig {
         minSdkVersion 14
@@ -23,9 +23,8 @@ android {
     buildTypes {
         release {
             runProguard false
-            proguardFile getDefaultProguardFile('proguard-android.txt')
-        }
-    }
+}
+}
     productFlavors {
         defaultFlavor {
             proguardFile 'proguard-rules.txt'
@@ -35,4 +34,6 @@ android {
 
 dependencies {
     compile 'com.android.support:support-v4:+'
+    compile files('libs/Parse-1.4.0.jar')
+    compile files('libs/libGoogleAnalyticsServices.jar')
 }
